<resources>
    <string name="app_name">Lateritia</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">Lateritia</string>
    <string name="settings_fragment_label">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="vehicle_name">Vehicle Name</string>

    <string name="liters_suffix">Liters</string>
    <string name="currency">"$"</string>
    <string name="vehicle_model">Model</string>
    <string name="vehicle_vin">VIN</string>
    <string name="vehicle_registration">Registration</string>
    <string name="vehicle_fuel_capacity">Fuel Capacity</string>
    <string name="vehicle_fuel_reserve">Fuel Reserve</string>
    <string name="button_save">Save</string>

    <string name="success_settings_save">Settings saved.</string>
    <string name="failure_settings_save">There was an error. Check your fields.</string>
    <string name="enter_price">Enter Price/Liter</string>
    <string name="operation_text">What would you like to do?</string>
    <string name="fuel_level_string">Enter Current Fuel Level</string>
    <string name="amount_spending_string">How Much Are You Spending?</string>
    <string name="result_text">You Will Pay</string>
    <string name="operations_fragment_label">Choose An Option</string>

    <string name="price_fragment_label">Set Fuel Price</string>
    <string name="fuel_level_fragment_label">Set Fuel Level</string>

    <string name="incorrent_ppl_message">Enter a valid price</string>
    <string name="result_fragment_label">Result</string>
    <string name="top_up_fragment_label">Set Spend Amount</string>
    <string name="back_to_home">Back to home</string>
    <string name="price_liter">Price/Liter</string>
    <string name="top_up_amount">Top up amount</string>
    <string name="start_button_string">Start</string>
    <string name="current_vehicle_settings">Current Vehicle Settings</string>
    <string name="divisions_suffix_string">Bars</string>
    <string name="max_divisions">Max Divisions</string>

    <string name="fuel_info">Your tank will be %1$d%% full (~%2$d bars)</string>

    <string name="sweet_mouth_1">Hi, there...</string>
    <string name="sweet_mouth_2">You\'re awesome!</string>
    <string name="sweet_mouth_3">Hello beautiful...</string>
    <string name="sweet_mouth_4">Awesome sauce...</string>
    <string name="vehicles">Vehicles</string>
    <string name="your_saved_vehicles">Your Saved Vehicles</string>
    <string name="preference_file_key">com.example.lateritia.MAIN_PREFERENCES</string>
    <string name="lateritia_default_vehicle">lateritia_default_vehicle</string>

    <string name="vehicle_list_item_name">%1$s %2$s</string>

    <string name="history">History</string>
    <string name="history_empty">No history yet.</string>
    <string name="location_hint">Last price here: $%.2f on %s</string>
    <string name="location_unavailable">Location unavailable</string>
    <string name="history_price">$%.2f/L</string>
    <string name="history_total">Total: $%.2f</string>
    <string name="history_percent">%d%% full</string>

    <string name="voice_input">Voice input</string>
    <string name="voice_prompt">Say the price per liter</string>
    <string name="voice_parse_error">Couldn\'t understand the price, please try again</string>
    <string name="voice_not_supported">Voice input not supported on this device</string>

    <string name="clear_all">Clear All</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="delete_entry_confirm">Delete this entry?</string>
    <string name="delete_all_confirm">Delete all history?</string>

    <string name="edit_location">Edit Location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="save">Save</string>
    <string name="invalid_coordinates">Enter valid coordinates</string>
</resources>