<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/home_fragment">

    <fragment
        android:id="@+id/home_fragment"
        android:name="com.example.laterita.home.HomeFragment"
        android:label="@string/home_fragment_label">
        <action
            android:id="@+id/action_home_fragment_to_settings_fragment"
            app:destination="@id/settings_fragment"
            app:popUpTo="@id/home_fragment"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_home_fragment_to_operations_fragment"
            app:destination="@id/operations_fragment" />
    </fragment>
    <fragment
        android:id="@+id/settings_fragment"
        android:name="com.example.laterita.settings.SettingsFragment"
        android:label="@string/settings_fragment_label">
        <action
            android:id="@+id/action_settings_fragment_to_home_fragment"
            app:destination="@id/home_fragment"
            app:popUpTo="@id/home_fragment" />
        <argument
            android:name="vehicleKey"
            app:argType="long" />
    </fragment>
    <fragment
        android:label="@string/operations_fragment_label"
        android:id="@+id/operations_fragment"
        android:name="com.example.laterita.fuelops.OperationsFragment">
        <action
            android:id="@+id/action_operations_fragment_to_price_fragment"
            app:destination="@id/price_fragment" />
    </fragment>
    <fragment
        android:id="@+id/price_fragment"
        android:name="com.example.laterita.fuelops.price.PriceFragment"
        android:label="@string/price_fragment_label"
        tools:layout="@layout/fragment_price">
        <action
            android:id="@+id/action_price_fragment_to_fuel_level_fragment"
            app:destination="@id/fuel_level_fragment" />
    </fragment>
    <fragment
        android:id="@+id/fuel_level_fragment"
        android:name="com.example.laterita.fuelops.level.FuelLevelFragment"
        android:label="@string/fuel_level_fragment_label" />
</navigation>